# forge-overlay

./: .gitignore  .tmuxp.yaml  README.md  TESTING_REFACTOR.md  pyproject.toml
.github/workflows/: test.yml
.scratch/projects/002-forge-overlay-repo-implementation/: DESIGN.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  README.md  STATUS.md
.scratch/projects/003-testing-situation-analysis/: README.md  TESTING_ANALYSIS.md  TESTING_REPORT.md  TEST_REFACTORING.md
.scratch/projects/004-testing-refactor/: PLAN.md  README.md
.scratch/projects/005-queue-refactor/: CONTEXT.md  DECISIONS.md  DESIGN.md  EXECUTION_QUEUE.md  FORGE_OVERLAY_QUEUE_REFACTOR_CONCEPT.md  IMPLEMENTATION.md  ISSUES.md  README.md  STATUS.md
.scratch/projects/006-queue-refactor-v2/: FORGE_OVERLAY_REFACTOR_GUIDE.md  PLAN.md  PROGRESS.md  QUEUE_REFACTOR_IMPROVEMENT_RECOMMENDATIONS.md  QUEUE_REFACTOR_V2_IMPLEMENTATION_GUIDE.md  README.md
demo/overlay/: ops.css  ops.js
demo/scripts/: clean-demo.sh  generate-demo.sh  run-demo.sh
demo/site/: 404.html  index.html  style.css
demo/site/notes/: day-1.html  day-2.html
demo/site/projects/: forge.html
demo/vault/: index.md
demo/vault/notes/: day-1.md  day-2.md
demo/vault/projects/: forge.md
src/forge_overlay/: __init__.py  _scripts.py  app.py  config.py  events.py  inject.py  main.py  proxy.py  static_handler.py
tests/: conftest.py  test_events.py  test_inject.py  test_integration.py  test_main.py  test_proxy.py  test_scripts.py  test_static_handler.py
