[project]
name = "forge-overlay"
version = "0.1.0"
description = "A Python project template with modern tooling."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" },
]

dependencies = [
  "starlette>=0.46",
  "sse-starlette>=2.0",
  "httpx>=0.28",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.26",
  "pytest-cov>=6.0",
  "httpx>=0.28",
  "anyio>=4.9",
  "mypy>=1.10",
  "ruff>=0.5.0",
]

[project.scripts]
forge-overlay = "forge_overlay.main:main"

#[project.urls]
#homepage = "https://github.com/Bullish-Design/forge-overlay"
#repository = "https://github.com/Bullish-Design/forge-overlay.git"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatch which package to ship (your code lives in src/forge_overlay)
packages = ["src/forge_overlay"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
#  "SPEC.md",
#  "docs",
  "tests",
  "pyproject.toml",
]

[tool.uv]
# Keep the default behavior; this section is here so you can extend it later if needed.

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --cov=forge_overlay --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
packages = ["src/forge_overlay"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
